@@ -56,7 +56,8 @@ FoundSet::FoundSet(const FoundSet& src)
 :  m_table_name(src.m_table_name),
    m_extra_join(src.m_extra_join),
    m_where_clause(src.m_where_clause),
-   m_sort_clause(src.m_sort_clause)
+   m_sort_clause(src.m_sort_clause),
+   m_extra_group_by(src.m_extra_group_by)
 {
 }
 
@@ -66,6 +67,7 @@ FoundSet& FoundSet::operator=(const FoundSet& src)
   m_extra_join = src.m_extra_join;
   m_where_clause = src.m_where_clause;
   m_sort_clause = src.m_sort_clause;
+  m_extra_group_by = src.m_extra_group_by;
 
   return *this;
 }
@@ -75,7 +77,8 @@ bool FoundSet::operator==(const FoundSet& src) const
   return (m_table_name == src.m_table_name)
       && (m_extra_join == src.m_extra_join)
       && (m_where_clause == src.m_where_clause)
-      && (m_sort_clause == src.m_sort_clause);
+      && (m_sort_clause == src.m_sort_clause)
+      && (m_extra_group_by == src.m_extra_group_by);
 }
 
 
